--- a/todo/templates/list.html
+++ b/todo/templates/list.html
@@ -1,11 +1,22 @@
 {% extends 'base.html' %}
 
 {% block header %}
-これがヘッダーです。
+<div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">TodoList</h1>
+          <p class="lead">TodoListを作ろう</p>
+        </div>
+      </div>
 {% endblock header %}
 {% block content %}
-{% for item in object_list %}
-<div class="alert alert-secondary" role="alert">{{ item.title }}</div>
-<div class="alert alert-secondary" role="alert">{{ item.memo }}</div>
-{% endfor %}
+<div class="container">
+    {% for item in object_list %}
+    <div class="alert alert-secondary" role="alert">
+        <p>{{ item.title }}</p>
+        <a href="#" class="btn btn-info btn" tabindex="-1" role="button" aria-disabled="true">編集</a>
+        <a href="#" class="btn btn-primary btn" tabindex="-1" role="button" aria-disabled="true">削除</a>
+        <a href="#" class="btn btn-success btn" tabindex="-1" role="button" aria-disabled="true">詳細</a>
+    </div>
+    {% endfor %}
+</div>
 {% endblock content %}
