--- a/todo/templates/list.html
+++ b/todo/templates/list.html
@@ -2,16 +2,16 @@
 
 {% block header %}
 <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-          <h1 class="display-4">TodoList</h1>
-          <p class="lead">TodoListを作ろう</p>
-        </div>
-      </div>
+    <div class="container">
+        <h1 class="display-4">TodoList</h1>
+        <p class="lead">TodoListを作ろう</p>
+    </div>
+</div>
 {% endblock header %}
 {% block content %}
 <div class="container">
     {% for item in object_list %}
-    <div class="alert alert-secondary" role="alert">
+    <div class="alert alert-{{ item.priority }}" role="alert">
         <p>{{ item.title }}</p>
         <a href="#" class="btn btn-info btn" tabindex="-1" role="button" aria-disabled="true">編集</a>
         <a href="#" class="btn btn-primary btn" tabindex="-1" role="button" aria-disabled="true">削除</a>
