--- a/todo/templates/list.html
+++ b/todo/templates/list.html
@@ -13,9 +13,9 @@
     {% for item in object_list %}
     <div class="alert alert-{{ item.priority }}" role="alert">
         <p>{{ item.title }}</p>
-        <a href="#" class="btn btn-info btn" tabindex="-1" role="button" aria-disabled="true">編集</a>
-        <a href="#" class="btn btn-primary btn" tabindex="-1" role="button" aria-disabled="true">削除</a>
-        <a href="#" class="btn btn-success btn" tabindex="-1" role="button" aria-disabled="true">詳細</a>
+        <a href="{% url 'update' item.pk %}" class="btn btn-info btn" tabindex="-1" role="button" aria-disabled="true">編集</a>
+        <a href="{% url 'delete' item.pk %}" class="btn btn-primary btn" tabindex="-1" role="button" aria-disabled="true">削除</a>
+        <a href="{% url 'detail' item.pk %}" class="btn btn-success btn" tabindex="-1" role="button" aria-disabled="true">詳細</a>
     </div>
     {% endfor %}
 </div>
