--- a/company_sns/templates/signup.html
+++ b/company_sns/templates/signup.html
@@ -1,1 +1,24 @@
-{{ some }}
+{% extends 'base.html' %}
+
+{% block content %}
+<body>
+    <form class="form-signin">
+  <div class="text-center mb-4">
+    <img class="mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+    <h1 class="h3 mb-3 font-weight-normal">Plese Sign up</h1>
+  </div>
+
+  <div class="form-label-group">
+    <input type="text" id="inputEmail" class="form-control" name="username" placeholder="User Name" required autofocus>
+    <label for="inputEmail">User Name</label>
+  </div>
+
+  <div class="form-label-group">
+    <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
+    <label for="inputPassword">Password</label>
+  </div>
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+  <p class="mt-5 mb-3 text-muted text-center">&copy; 2017-2019</p>
+</form>
+</body>
+{% endblock content %}
