--- a/company_sns/templates/signup.html
+++ b/company_sns/templates/signup.html
@@ -6,7 +6,9 @@
     <img class="mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
     <h1 class="h3 mb-3 font-weight-normal">Plese Sign up</h1>
   </div>
-
+  {% if error %}
+    {{ error }}
+  {% endif %}
   <div class="form-label-group">
     <input type="text" id="inputEmail" class="form-control" name="username" placeholder="User Name" required autofocus>
     <label for="inputEmail">User Name</label>
