--- a/company_sns/templates/list.html
+++ b/company_sns/templates/list.html
@@ -11,11 +11,13 @@
 
 {% block content %}
 <div class="container">
+    {% for item in object_list %}
     <div class="alert alert-success" role="alert">
-        <p>タイトル：</p>
-        <p>投稿者：</p>
+        <p>タイトル：{{ item.title}}</p>
+        <p>投稿者：{{ item.author }}</p>
         <a href="#" class="btn btn-primary" role="button" aria-pressed="true">Primary link</a>
         <a href="#" class="btn btn-secondary" role="button" aria-pressed="true">Link</a>
     </div>
+    {% endfor %}
 </div>
 {% endblock content %}
