--- a/company_sns/templates/signup.html
+++ b/company_sns/templates/signup.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block customcss %}
+<link rel='stylesheet' type='text/css' href="{% static 'style.css' %}">
+{% endblock customcss %}
 
 {% block content %}
 <form class="form-signin" method="POST" action="">{% csrf_token %}
