--- a/company_sns/templates/list.html
+++ b/company_sns/templates/list.html
@@ -13,7 +13,7 @@
 <div class="container">
     {% for item in object_list %}
     <div class="alert alert-success" role="alert">
-        <p>タイトル：{{ item.title}}</p>
+        <p>タイトル：<a href="{% url 'detail' item.pk %}">{{ item.title}}</a></p>
         <p>投稿者：{{ item.author }}</p>
         <a href="#" class="btn btn-primary" role="button" aria-pressed="true">Primary link</a>
         <a href="#" class="btn btn-secondary" role="button" aria-pressed="true">Link</a>
