--- a/company_sns/templates/detail.html
+++ b/company_sns/templates/detail.html
@@ -16,7 +16,7 @@
         <p>投稿者：{{ object.author }}</p>
         <p>内容：{{ object.content }}</p>
         <p><img src="{{ object.images.url }}" width="300"></p>
-        <a href="#" class="btn btn-primary" role="button" aria-pressed="true">いいねする</a>
+        <a href="{% url 'good' object.pk %}" class="btn btn-primary" role="button" aria-pressed="true">いいねする</a>
         <a href="#" class="btn btn-secondary" role="button" aria-pressed="true">既読にする</a>
     </div>
 </div>
